Concesionario/: Arreglando problemas de 'Actividades' desde el archivo AndroidManifest.xml

--- a/Semestre_3/Concesionario/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/Concesionario/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.Concesionario"
         tools:targetApi="31">
         <activity
+            android:name=".FacturasActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".VehiculosActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".ClientesActivity"
+            android:exported="false"
+            />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
