--- a/Semestre_3/Concesionario/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/Concesionario/app/src/main/AndroidManifest.xml
@@ -13,16 +13,13 @@
         tools:targetApi="31">
         <activity
             android:name=".FacturasActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".VehiculosActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".ClientesActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
