--- a/Semestre_3/Concesionario/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/Concesionario/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Concesionario"
         tools:targetApi="31">
         <activity
+            android:name=".ListarClientesActivity"
+            android:exported="false" />
+        <activity
             android:name=".FacturasActivity"
             android:exported="false" />
         <activity
