--- a/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.UniversidadApp"
         tools:targetApi="31">
         <activity
+            android:name=".Materia"
+            android:exported="false" />
+        <activity
+            android:name=".Ingreso"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
