Se agregó los recursos faltantes

--- a/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
@@ -12,14 +12,8 @@
         android:theme="@style/Theme.UniversidadApp"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".ListarEstudiantesActivity"
+            android:exported="false" />
         <activity
             android:name=".Materia"
             android:exported="false" />
