--- a/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.UniversidadApp"
         tools:targetApi="31">
         <activity
+            android:name=".MatriculaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ListarEstudiantesActivity"
             android:exported="false" />
         <activity
