--- a/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/AndroidManifest.xml
@@ -22,15 +22,14 @@
             android:exported="false" />
         <activity
             android:name=".Ingreso"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
